# codemao_api_collection

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
src/: account.rs  community.rs  forum.rs  lib.rs  works.rs
src/account/: dtos.rs  user_behavior.rs
src/account/user_behavior/: dtos.rs  user_behavior_test.rs
src/community/: banner_type.rs  community_behavior.rs  dtos.rs  test.rs
src/forum/: dtos.rs  forum_behavior.rs  test.rs
src/works/: dtos.rs  test.rs  work_behavior.rs
