[package]
name = "codemao_api_collection"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "编程猫社区api集合"

[dependencies]
log = "0.4.32"
reqwest = { version = "0.13.4", features = ["cookies", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.52.3", features = ["full"] }
env_logger = "0.11.10"